# open-construction-modeler

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  project.ocm
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  property-tests.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/civil/: Cargo.toml
crates/civil/src/: parser.rs
crates/engine/: Cargo.toml
crates/engine/src/: align.rs  bcf.rs  clash.rs  diff.rs  io.rs  lib.rs  metadata.rs  object.rs  project.rs  relations.rs  render.rs
crates/engine/tests/: proptest_examples.rs
crates/ifc/: Cargo.toml
crates/ifc/src/: geometry.rs  lib.rs  parser.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: OCM_Technical_Roadmap.md  OCM_Technical_Roadmap_v2.md  PROPERTY_TESTS.md  research.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  Viewport.tsx  viewportUtils.test.ts  viewportUtils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
web/: .env.example  .gitignore  SETUP.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/auth/callback/: route.ts
web/src/app/auth/error/: page.tsx
web/src/app/auth/login/: LoginForm.tsx  page.tsx
web/src/app/items/[id]/: actions.ts  page.tsx
web/src/app/new/: NewItemForm.tsx  actions.ts  page.tsx
web/src/app/profile/[username]/: page.tsx
web/src/components/: AlignmentReportCard.tsx  DiffCard.tsx  ForkButton.tsx  GltfViewer.tsx  IfcModelInfo.tsx  ItemCard.tsx  Nav.tsx
web/src/lib/: database.types.ts  ifc-wasm.ts  sanitize-next-path.test.ts  sanitize-next-path.ts  security-headers.test.ts  security-headers.ts  storage-url.test.ts  storage-url.ts  uploads.test.ts  uploads.ts  utils.test.ts  utils.ts
web/src/lib/supabase/: client.ts  proxy.ts  server.ts
web/src/wasm/ocm/: ocm_wasm.d.ts  ocm_wasm.js  ocm_wasm_bg.wasm  ocm_wasm_bg.wasm.d.ts  package.json
web/supabase/migrations/: 0001_init.sql  0002_storage_limits.sql  0003_fork.sql
