[workspace]
members = [
    "crates/engine",
    "crates/ifc",
    "crates/civil",
    "crates/app",
    "crates/wasm",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cora Baldwin <baldwincora03@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/coramb2/open-construction-modeler"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
# `js` provides uuid's randomness backend on wasm32 (browser crypto); it is a
# no-op on native targets, so it is safe to enable unconditionally here.
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
zip = { version = "4", default-features = false, features = ["deflate-flate2-zlib-rs"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
