[package]
name = "ocm-desktop"
version = "0.1.0"
description = "Open Construction Modeler Desktop"
authors = ["Cora Baldwin <baldwincora03@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/coramb2/open-construction-modeler"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json.workspace = true
serde.workspace = true
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
engine = { path = "../crates/engine" }
ifc = { path = "../crates/ifc" }
tauri-plugin-dialog = "2.6.0"
