[package]
name = "ocm-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# cdylib -> the .wasm artifact for the browser; rlib -> lets it also build as a
# normal library on native (so `cargo test/clippy --workspace` covers it).
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
engine = { path = "../engine" }
ifc = { path = "../ifc" }
wasm-bindgen = "0.2"
serde_json.workspace = true
